# market-aggregator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  pages.yml  rust.yml
benches/: ts_array.rs
src/: lib.rs  main.rs
src/book_management/: mod.rs  multibook.rs  traded_instruments.rs
src/exchange_connectivity/: mod.rs
src/exchange_connectivity/binance/: book.rs  mod.rs
src/exchange_connectivity/deribit/: book.rs  mod.rs
src/gui/: mod.rs
src/time_series_array/: mod.rs
tests/: integration.rs
