[package]
name = "market-aggregator"
version = "0.1.0"
edition = "2024"
authors = ["Alex Do <alexxdo2004@gmail.com>"]
readme = "README.md"
license = "MIT"
exclude = [".github"]

[features]

[dependencies]

[build-dependencies]

[dev-dependencies]

[[bin]]
name = "market-aggregator"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = true
strip = true
codegen-units = 1
panic = "abort"
