[package]
name = "market-aggregator"
version = "0.1.0"
edition = "2024"
authors = ["Alex Do <alexxdo2004@gmail.com>"]
readme = "README.md"
license = "MIT"
exclude = [".github"]

[features]
test-apis = []

[dependencies]
dotenv = "0.15.0"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
log = "0.4.25"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full", "test-util"] }
url = "2.5.4"
futures-util = "0.3.31"
fern = { version = "0.7.1", features = ["chrono", "colored"] }
chrono = "0.4.39"
multimap = "0.10.0"
colored = "3.0.0"
egui = "0.30.0"
eframe = "0.30.0"
egui_extras = "0.30.0"
criterion = "0.5.1"

[build-dependencies]

[dev-dependencies]

[[bin]]
name = "market-aggregator"
path = "src/main.rs"

[[bench]]
name = "ts_array"
harness = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = true
strip = true
codegen-units = 1
panic = "abort"
